simple design of basic calculator

--- a/index.html
+++ b/index.html
@@ -6,8 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <script src="./javascript/script.js" defer></script>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <h1>Calculator</h1> 
+    <div class="calculator">
+            <div class="display">
+                <canvas></canvas>
+            </div>
+            <div class="column">
+                <div class="groupbuttons">
+                    <button class="calcButtons" style="background-color:rgb(255, 0, 0); color:white">C</button>
+                    <button class="calcButtons">/</button>
+                    <button class="calcButtons">x</button>
+                </div>
+                <div class="groupbuttons">
+                    <button class="calcButtons">7</button>
+                    <button class="calcButtons">8</button>
+                    <button class="calcButtons">9</button>
+                </div>
+            </div>
+            <div class="column">
+                <div class="groupbuttons">
+                    <button class="calcButtons">4</button>
+                    <button class="calcButtons">5</button>
+                    <button class="calcButtons">6</button>
+                </div>
+            </div>
+            <div class="column">
+                <div class="groupbuttons">
+                    <button class="calcButtons">1</button>
+                    <button class="calcButtons">2</button>
+                    <button class="calcButtons">3</button>
+                </div>
+            <div class="column">
+                <div class="groupbuttons">
+                    <button class="calcButtons">+</button>
+                    <button class="calcButtons">-</button>
+                    <button class="calcButtons">=</button>
+                </div>
+            </div>
+       
+
+    </div>
     
 </body>
 </html>
