refine calculator basic simple design style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <h1>Calculator</h1> 
     <div class="calculator">
             <div class="display">
-                <canvas></canvas>
+                <figure class="calculatorInputs">0</figure>
             </div>
+            <div class="calculatorBottom">
             <div class="column">
                 <div class="groupbuttons">
                     <button class="calcButtons" style="background-color:rgb(255, 0, 0); color:white">C</button>
@@ -46,6 +47,7 @@
                     <button class="calcButtons">=</button>
                 </div>
             </div>
+        </div>
        
 
     </div>
